Minor edits to web page

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ and our administrator may contact you if we need any extra information.</h4>
 -->
 {% if page.collaborative_notes %}
 <p id="collaborative_notes">
-  We will use this <a href="{{page.collaborative_notes}}">collaborative document</a> for chatting, taking notes, and sharing URLs and bits of code.
+  We will use <a href="{{page.collaborative_notes}}">Slack</a> for chatting, asking questions, and sharing URLs and bits of code.
 </p>
 {% endif %}
 
