--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "swc"    # what kind of Carpentry (must be either "lc" or "dc" or "swc")
-venue: "Vanderbilt University"        # brief name of host site without address (e.g., "Euphoric State University")
+venue: "Vanderbilt University Medical Center"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Stevenson 5 (Sci & Engr), Room 326"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "USA"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
@@ -12,7 +12,6 @@ humantime: "8:30 am - 4:00 pm"    # human-readable times for the workshop (e.g.,
 startdate: 2017-08-17      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-08-18        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Christopher Fonnesbeck", "William French", "Jake Hughey"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: []     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["chris.fonnesbeck@vanderbilt.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 collaborative_notes: vumc-swc-2017.slack.com            # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document
 eventbrite: 35964703396        # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
