Replaced nano as the recommended editor on all platforms

--- a/index.html
+++ b/index.html
@@ -452,22 +452,13 @@ eventbrite: 35964703396        # optional: alphanumeric key for Eventbrite regis
 
   <div class="row">
     <div class="col-md-4">
-      <h4 id="editor-windows">Windows</h4>
-      <a href="https://www.youtube.com/watch?v=339AEqk9c-8">Video Tutorial</a>
+	    <h4 id="editor-windows">Windows</h4>
       <p>
-        nano is a basic editor and the default that instructors use in the workshop.
-        To install it,
-        download the <a href="{{site.swc_installer}}">
-          {% if page.carpentry == "swc" %}
-          Software Carpentry
-          {% elsif page.carpentry == "dc" %}
-          Data Carpentry
-          {% elsif page.carpentry == "lc" %}
-          Library Carpentry
-          {% endif %}
+        Atom is a powerful but easy-to-use editor for multiple platforms and is a good choice if you don't have previous text editing experience.
+        To install it, download the <a href="https://atom.io">
           Windows installer
 	</a>
-        and double click on the file to run it.
+        and double click on the file to begin the installation process.
         <strong>This installer requires an active internet connection.</strong>
       </p>
       <p>
@@ -482,22 +473,21 @@ eventbrite: 35964703396        # optional: alphanumeric key for Eventbrite regis
     <div class="col-md-4">
       <h4 id="editor-macosx">Mac OS X</h4>
       <p>
-        nano is a basic editor and the default that instructors use in the workshop.
-        See the Git installation <a href="https://www.youtube.com/watch?v=9LQhwETCdwY ">video tutorial</a>
-        for an example on how to open nano.
-        It should be pre-installed.
+        TextMate is a powerful, multi-purpose, open source text editor for macOS.
+        You can download it <a href="http://macromates.com/download">here</a>; be sure to download the correct
+	version for your operating system. You can install it by double-clicking on the installation file.
       </p>
       <p>
         Others editors that you can use are
-        <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a> or
+        <a href="http://atom.io">Atom</a> or
         <a href="http://www.sublimetext.com/">Sublime Text</a>.
       </p>
     </div>
     <div class="col-md-4">
       <h4 id="editor-linux">Linux</h4>
       <p>
-        nano is a basic editor and the default that instructors use in the workshop.
-        It should be pre-installed.
+        Atom is a powerful but easy-to-use editor for multiple platforms and is a good choice if you don't have previous text editing experience.
+	      To install it, download the <a href="https://atom.io">Linux installer</a> and follow the instructions.
       </p>
       <p>
         Others editors that you can use are
